k8s/frontend-teller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-teller
  namespace: frontend-teller
  labels:
    app: frontend-teller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-teller
  template:
    metadata:
      labels:
        app: frontend-teller
    spec:
      containers:
        - name: frontend-teller
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/novabank/dev/frontend-teller:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
