k8s/frontend-teller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-teller
  namespace: frontend-teller
  labels:
    app: frontend-teller
spec:
  selector:
    app: frontend-teller
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
